Fixed first page button layout overlap

--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ header > div {
 
 @supports (backdrop-filter: blur(1rem)) {
     .primary-navigation {
-        background-color: hsl(0 0% 100% / 0.2);
+        background-color: hsl(0 0% 100% / 0.1);
         backdrop-filter: blur(1.5rem);
     }
 }
@@ -559,7 +559,7 @@ header > div {
 .project-buttons button {
     border-radius: 3px;
     padding: 3px;
-    margin: 4px;
+    margin: 4px 0px;
     border: 0px;
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
     position: relative;
